data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4209.wast
;; 8. **Test Description**: Check a `call_indirect` within a `loop` where the type index points to a polymorphic function type, verifying accurate type resolution and non-trapping execution.    - *Constraint Checked*: Type context completeness and polymorphism.    - *Infinite Loop Context*: Correct execution should avoid infinite loops.

(assert_invalid
  (module
    (type (func (param i32)))
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 1)
    (func $callee (param i32) (result i32)
      local.get 0
    )
    (func $test
      (i32.const 0)
      (loop $loop
        (call_indirect (type 0) (i32.const 0))
        br $loop
      )
    )
  )
  "type mismatch"
)